--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    
+    <main>
+      <header>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus distinctio voluptas veniam, adipisci labore dolorum nulla voluptatum eligendi odit optio magnam soluta alias maxime neque magni mollitia molestiae minus eos!
+      </header>
+      <aside>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde blanditiis quo quia error voluptates officia provident. Alias error harum ex quae quidem expedita cum voluptatem minima exercitationem, totam, earum dolor?
+      </aside>
+      <article>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi et maxime, vitae delectus eum dicta quia quod id dolor sunt quo aliquam placeat facere libero iure soluta minima. Quam, dolorum.
+      </article>
+    </main>
   </body>
 </html>
